[ADD]코인관련 스케쥴링 추가
